update depenencies test

--- a/job-matcher-miniapp/requirements.txt
+++ b/job-matcher-miniapp/requirements.txt
@@ -3,6 +3,6 @@ langchain-anthropic>=0.1.0
 langchain-core>=0.1.0
 python-docx>=0.8.11
 PyPDF2>=3.0.0
-latex2text>=0.1.0
+pylatexenc>=2.10
 tqdm>=4.65.0
-python-dotenv>=1.0.0 
+python-dotenv>=1.0.0
