--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.7.0
 beautifulsoup4==4.12.3
-blis==1.1.0
+blis==0.7.11
 bs4==0.0.2
 cachetools==5.5.0
 catalogue==2.0.10
@@ -12,11 +12,11 @@ charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
 confection==0.1.5
-cymem==2.0.11
+cymem==2.0.10
 Deprecated==1.2.18
 dnspython==2.7.0
 email_validator==2.2.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 fastapi==0.115.6
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
@@ -47,16 +47,16 @@ marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-murmurhash==1.0.13
+murmurhash==1.0.11
 numpy==1.26.4
 oauthlib==3.2.2
 packaging==24.2
 plotly==6.0.1
 pluggy==1.5.0
-preshed==3.0.10
+preshed==3.0.9
 proto-plus==1.25.0
 protobuf==5.29.2
-psycopg2-binary==2.9.10
+psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.4
@@ -81,7 +81,7 @@ slowapi==0.1.9
 smart-open==7.1.0
 sniffio==1.3.1
 soupsieve==2.6
-spacy==3.8.3
+spacy==3.7.5
 spacy-cleaner==3.2.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
@@ -91,7 +91,7 @@ sqlmodel==0.0.23
 srsly==2.5.0
 starlette==0.41.3
 testcontainers==4.10.0
-thinc==9.2.0
+thinc==8.2.5
 tqdm==4.66.6
 typer==0.15.1
 types-requests==2.32.0.20241016
