--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ greenlet==3.1.1
 grpcio==1.69.0
 grpcio-status==1.69.0
 h11==0.16.0
+html2text==2025.4.15
 httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
