--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,12 +12,18 @@ charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
 confection==0.1.5
+contourpy==1.3.3
+cycler==0.12.1
 cymem==2.0.10
+defusedxml==0.7.1
 Deprecated==1.2.18
 dnspython==2.7.0
+docker==7.1.0
 email_validator==2.2.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 fastapi==0.115.6
+fonttools==4.60.0
+fpdf2==2.8.4
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
 google-api-python-client==2.156.0
@@ -30,6 +36,7 @@ greenlet==3.1.1
 grpcio==1.69.0
 grpcio-status==1.69.0
 h11==0.16.0
+httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
@@ -37,6 +44,7 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kaleido==0.2.1
+kiwisolver==1.4.9
 langcodes==3.5.0
 language_data==1.3.0
 limits==4.4.1
@@ -46,11 +54,15 @@ Mako==1.3.9
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mdurl==0.1.2
 murmurhash==1.0.11
+narwhals==2.5.0
 numpy==1.26.4
 oauthlib==3.2.2
 packaging==24.2
+pdfly==0.4.0
+pillow==11.3.0
 plotly==6.0.1
 pluggy==1.5.0
 preshed==3.0.9
@@ -65,9 +77,11 @@ pydantic_core==2.27.2
 Pygments==2.18.0
 pyinstaller-hooks-contrib==2024.11
 pyparsing==3.2.0
+pypdf==6.1.0
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.18
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.4
@@ -104,5 +118,3 @@ uvicorn==0.34.2
 wasabi==1.1.3
 weasel==0.4.1
 wrapt==1.17.0
-python-multipart==0.0.18
-matplotlib==3.10.3
