added test results to gitignore, docker checks appropriate env variables for docker compose

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ frontend/.vercel
 frontend/next-env.d.ts
 frontend/*.tsbuildinfo
 frontend/playwright-report/
+frontend/test-results/
 
 # Dependencies
 node_modules/
