--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,6 @@
 		"@next/eslint-plugin-next": "15.3.1",
 		"@playwright/test": "^1.56.1",
 		"@react-types/shared": "3.25.0",
-		"@tailwindcss/postcss": "^4.1.18",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
@@ -62,7 +61,7 @@
 		"postcss": "8.4.49",
 		"prettier": "3.3.3",
 		"tailwind-variants": "0.1.20",
-		"tailwindcss": "^4.1.18",
+		"tailwindcss": "3.4.16",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.26.1"
 	}
